--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -788,10 +788,6 @@ de:
         Du hast dich erfolgreich von weiteren Benachrichtigungen abgemeldet.
         (<a href="%{subscribe_href}">wieder anmelden</a>)
   enumerize:
-    required:
-      html: <abbr title="required">*</abbr>
-      mark: "*"
-      text: required
     search_form:
       age:
         '0': 0
@@ -1012,6 +1008,8 @@ de:
         - Gesundheitsversorgung
         - Behörden
         - Aufenthaltsrecht
+    routes:
+      faq: haeufige-fragen
     search:
       form_less_label: Suchoptionen ausblenden
       form_more_label: Suchoptionen einblenden
@@ -1031,6 +1029,9 @@ de:
       enclosing: gefunden
       faq_anchor: hier
       faq_text: 'Häufige Fragen und Antworten zur Suche findest du '
+      language_explanation:
+        connector: und
+        text: Dieses Angebot gibt es auf %{language_list}.
       map:
         cooperation: Kooperationsprojekt
         enlarge_map: Karte vergrößern
@@ -1045,13 +1046,70 @@ de:
         other: "%{count} Telefonberatungen und Onlineangebote"
         zero: Keine Telefonberatungen und Onlineangebote
       show_personal: Zeige lokale Angebote
+    shared:
+      current_and_original_locale:
+        "'150'": Deutsche Gebärdensprache
+        "'326'": Ukrainisch - українська
+        "'568'": Niederländisch - Nederlands
+        "'639'": Dari - دری
+        '150': Deutsche Gebärdensprache
+        '326': Ukrainisch - українська
+        '568': Niederländisch - Nederlands
+        '639': Dari - دری
+        amh: Amharisch - አማርኛ
+        ara: Arabisch - عربي
+        aze: Aserbaidschanisch - Azərbaycan
+        bel: Weißrussisch - беларуская мова
+        ben: Bengalisch - বাংলা
+        bos: Bosnisch - bosanski
+        bul: Bulgarisch - български
+        deu: Deutsch
+        ell: Griechisch - ελληνικά
+        eng: Englisch - English
+        fas: Persisch (Farsi) - فارسی
+        fra: Französisch - Français
+        hin: Hindi - हिन्दी
+        hrv: Kroatisch - hrvatski
+        hun: Ungarisch - magyar
+        ita: Italienisch - italiano
+        kik: Kikuyu - Gĩkũyũ
+        kur: Kurdisch - کوردی
+        lav: Lettisch - latviešu
+        lit: Litauisch - lietuvių
+        ltz: Luxemburgisch - Lëtzebuergesch
+        luo: Luo - Dholuo
+        mkd: Mazedonisch - македонски
+        mul: weitere Sprachen auf Anfrage
+        nor: Norwegisch - Norsk
+        pol: Polnisch - polski
+        por: Portugiesisch - português
+        rom: Romanes - Romani
+        ron: Rumänisch - română
+        rus: Russisch - русский
+        snk: Soninke - Soninkanxaane
+        spa: Spanisch - español
+        sqi: Albanisch - Shqipja
+        srp: Serbisch - српски
+        swa: Swahili - Kiswahili
+        swe: Schwedisch - svenska
+        tam: Tamil - தமிழ்
+        tel: Telugu - తెలుగు
+        tgk: Tadschikisch - тоҷикӣ / تاجیکی
+        tha: Thai - ภาษาไทย
+        tuk: Turkmenisch - Türkmençe / Tүркменче
+        tur: Türkisch - Türkçe
+        urd: Urdu - اردو
+        uzb: Usbekisch - Oʻzbek tili
+        vie: Vietnamesisch - tiếng Việt
+        wol: Wolof - wɔlɔf
+        zho: Chinesisch - 普通话 / 普通話
+        zza: Zaza - Zazaki / Kırmancki
     single_search_result:
       encounters:
         chat: Chat
         email: E-Mail
         forum: Forum
         hotline: Telefon
-        list: 
         online-course: Online-Kurs
         personal: Persönlich
         portal: Adressliste
@@ -1131,62 +1189,14 @@ de:
           exclusive_gender:
             boys_only: nur für Jungen und Männer
             girls_only: nur für Mädchen und Frauen
-          language:
-            '150': 
-            '326': 
-            '568': 
-            '639': 
-            amh: 
-            ara: 
-            aze: 
-            bel: 
-            ben: 
-            bos: 
-            bul: 
-            deu: 
-            ell: 
-            eng: 
-            fas: 
-            fra: 
-            hin: 
-            hrv: 
-            hun: 
-            ita: 
-            kik: 
-            kur: 
-            lav: 
-            lit: 
-            ltz: 
-            luo: 
-            mkd: 
-            mul: 
-            nor: 
-            pol: 
-            por: 
-            rom: 
-            ron: 
-            rus: 
-            snk: 
-            spa: 
-            sqi: 
-            srp: 
-            swa: 
-            swe: 
-            tam: 
-            tel: 
-            tgk: 
-            tha: 
-            tuk: 
-            tur: 
-            urd: 
-            uzb: 
-            vie: 
-            wol: 
-            zho: 
-            zza: 
           target_audience:
             acquaintances: für Bekannte und Verwandte
             children: für Kinder und Jugendliche
+            family_acquaintances: für Bekannte und Verwandte
+            family_children: für Kinder und Jugendliche
+            family_nuclear_family: für Familien
+            family_parents: für Eltern
+            family_pregnant_woman: für Schwangere
             nuclear_family: für Familien
             parents: für Eltern
             pregnant_woman: für Schwangere
@@ -1268,7 +1278,7 @@ de:
           long: Angebote zum Thema …
           short: Angebote zu …
     show:
-      last_updated: Eintrag zuletzt bearbeitet am
+      last_update: Eintrag zuletzt bearbeitet am
       next_steps:
         code_word: Wonach musst du fragen oder auf der Webseite suchen?
         heading: Was musst du tun?
@@ -1521,181 +1531,6 @@ de:
         </p>
       title: Rechtliche Hinweise
     faq:
-      heading: 
-      section_four:
-        answer_eight: 
-        answer_eight_bullet_one: 
-        answer_eight_bullet_two: 
-        answer_five: 
-        answer_four: 
-        answer_one: 
-        answer_one_bullet_five: 
-        answer_one_bullet_four: 
-        answer_one_bullet_one: 
-        answer_one_bullet_six: 
-        answer_one_bullet_three: 
-        answer_one_bullet_two: 
-        answer_seven: 
-        answer_six: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_one:
-        answer_eight: 
-        answer_eighteen: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four: 
-        answer_fourteen: 
-        answer_nine: 
-        answer_nineteen: 
-        answer_one: 
-        answer_seven: 
-        answer_seventeen: 
-        answer_six: 
-        answer_sixteen: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three: 
-        answer_twelve: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_eighteen: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_nineteen: 
-        question_one: 
-        question_seven: 
-        question_seventeen: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
-      section_three:
-        answer_eight: 
-        answer_five: 
-        answer_four: 
-        answer_nine: 
-        answer_one: 
-        answer_seven: 
-        answer_six: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_two:
-        answer_eight_bullet_one: 
-        answer_eight_bullet_three: 
-        answer_eight_bullet_two: 
-        answer_eight_first_part: 
-        answer_eight_second_part: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four_bullet_one: 
-        answer_four_bullet_two: 
-        answer_four_first_part: 
-        answer_four_second_part: 
-        answer_fourteen_bullet_one: 
-        answer_fourteen_bullet_three: 
-        answer_fourteen_bullet_two: 
-        answer_fourteen_first_part: 
-        answer_fourteen_second_part: 
-        answer_nine_bullet_five: 
-        answer_nine_bullet_four: 
-        answer_nine_bullet_one: 
-        answer_nine_bullet_three: 
-        answer_nine_bullet_two: 
-        answer_nine_first_part: 
-        answer_nine_second_part: 
-        answer_one: 
-        answer_seven_bullet_five: 
-        answer_seven_bullet_four: 
-        answer_seven_bullet_one: 
-        answer_seven_bullet_six: 
-        answer_seven_bullet_three: 
-        answer_seven_bullet_two: 
-        answer_seven_first_part: 
-        answer_seven_second_part: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_seven: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_six_first_part: 
-        answer_six_second_part: 
-        answer_sixteen_first_part: 
-        answer_sixteen_second_part: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three_bullet_one: 
-        answer_three_bullet_three: 
-        answer_three_bullet_two: 
-        answer_three_first_part: 
-        answer_three_second_part: 
-        answer_twelve_bullet_one: 
-        answer_twelve_bullet_three: 
-        answer_twelve_bullet_two: 
-        answer_twelve_first_part: 
-        answer_twelve_second_part: 
-        answer_two_bullet_five: 
-        answer_two_bullet_four: 
-        answer_two_bullet_one: 
-        answer_two_bullet_six: 
-        answer_two_bullet_three: 
-        answer_two_bullet_two: 
-        answer_two_first_part: 
-        answer_two_second_part: 
-        heading: 
-        question_eight: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
       title: Häufige Fragen
     home:
       how:
@@ -2054,6 +1889,19 @@ de:
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
+  routes:
+    '404': 
+    datenschutzhinweise: 
+    definitions: 
+    emails: 
+    new: 
+    preview: 
+    rechtliche-hinweise: 
+    search_locations: 
+    subscribe: 
+    subscriptions: 
+    unsubscribe: 
+    update_requests: 
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
@@ -2067,41 +1915,26 @@ de:
   simple_form:
     hints:
       contact:
-        new:
+        show:
           email: 
           message: 
           name: 
       search_form:
-        about:
-          query: 
-          search_location: 
-        faq:
-          query: 
-          search_location: 
         home:
           query: 
           search_location: 
         index:
           query: 
           search_location: 
-        new:
-          query: 
-          search_location: 
-        not_found:
+        show:
           query: 
           search_location: 
       subscription:
-        about:
-          email: 
-        faq:
-          email: 
         home:
           email: 
         index:
           email: 
-        new:
-          email: 
-        not_found:
+        show:
           email: 
     required:
       html: <abbr title="required">*</abbr>
