--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -739,10 +739,6 @@ en:
         You have successfully unsubscribed from further email notifications.
         (<a href="%{subscribe_href}">subscribe again</a>)
   enumerize:
-    required:
-      html: 
-      mark: 
-      text: 
     search_form:
       age:
         '0': 
@@ -964,6 +960,8 @@ en:
         - health care
         - authorities
         - residence
+    routes:
+      faq: frequently-asked-questions
     search:
       form_less_label: hide search options
       form_more_label: show search options
@@ -983,6 +981,9 @@ en:
       enclosing: 
       faq_anchor: here
       faq_text: 'If you have questions about our search you can find our FAQ '
+      language_explanation:
+        connector: and
+        text: This offer is available in %{language_list}.
       map:
         cooperation: 
         enlarge_map: Enlarge map
@@ -997,13 +998,70 @@ en:
         other: "%{count} remote offers"
         zero: No remote offers
       show_personal: Show local offers
+    shared:
+      current_and_original_locale:
+        "'150'": German Sign Language - Deutsche Gebärdensprache
+        "'326'": Ukrainian - українська
+        "'568'": Dutch - Nederlands
+        "'639'": Dari - دری
+        '150': German Sign Language - Deutsche Gebärdensprache
+        '326': Ukrainian - українська
+        '568': Dutch - Nederlands
+        '639': Dari - دری
+        amh: Amharic - አማርኛ
+        ara: Arabian - عربي
+        aze: Azerbaijani - Azərbaycan
+        bel: Belarusian - беларуская мова
+        ben: Bengalese - বাংলা
+        bos: Bosnian - bosanski
+        bul: Bulgarian - български
+        deu: German - Deutsch
+        ell: Greek - ελληνικά
+        eng: English
+        fas: Persian (Farsi) - فارسی
+        fra: French - Français
+        hin: Hindi - हिन्दी
+        hrv: Kroatian - hrvatski
+        hun: Hungarian - magyar
+        ita: Italic - italiano
+        kik: Kikuyu - Gĩkũyũ
+        kur: Kurdish - کوردی
+        lav: Latvian - latviešu
+        lit: Lithuanian - lietuvių
+        ltz: Luxembourgish - Lëtzebuergesch
+        luo: Luo - Dholuo
+        mkd: Macedonian - македонски
+        mul: more languages upon request
+        nor: Norwegian - Norsk
+        pol: Polish - polski
+        por: Portuguese - português
+        rom: Romany - Romani
+        ron: Romanian - română
+        rus: Russian - русский
+        snk: Soninke - Soninkanxaane
+        spa: Spanish - español
+        sqi: Albanian - Shqipja
+        srp: Serbian - српски
+        swa: Swahili - Kiswahili
+        swe: Swedish - svenska
+        tam: Tamil - தமிழ்
+        tel: Telugu - తెలుగు
+        tgk: Tadjik - тоҷикӣ / تاجیکی
+        tha: Thai - ภาษาไทย
+        tuk: Turkmen - Türkmençe / Tүркменче
+        tur: Turkish - Türkçe
+        urd: Urdu - اردو
+        uzb: Uzbek - Oʻzbek tili
+        vie: Vietnamese - tiếng Việt
+        wol: Wolof - wɔlɔf
+        zho: Chinese - 普通话 / 普通話
+        zza: Zaza - Zazaki / Kırmancki
     single_search_result:
       encounters:
         chat: chat
         email: email
         forum: forum
         hotline: telephone
-        list: 
         online-course: online course
         personal: personal
         portal: address list
@@ -1081,62 +1139,14 @@ en:
           exclusive_gender:
             boys_only: boys and men only
             girls_only: girls and women only
-          language:
-            '150': 
-            '326': 
-            '568': 
-            '639': 
-            amh: 
-            ara: 
-            aze: 
-            bel: 
-            ben: 
-            bos: 
-            bul: 
-            deu: 
-            ell: 
-            eng: 
-            fas: 
-            fra: 
-            hin: 
-            hrv: 
-            hun: 
-            ita: 
-            kik: 
-            kur: 
-            lav: 
-            lit: 
-            ltz: 
-            luo: 
-            mkd: 
-            mul: 
-            nor: 
-            pol: 
-            por: 
-            rom: 
-            ron: 
-            rus: 
-            snk: 
-            spa: 
-            sqi: 
-            srp: 
-            swa: 
-            swe: 
-            tam: 
-            tel: 
-            tgk: 
-            tha: 
-            tuk: 
-            tur: 
-            urd: 
-            uzb: 
-            vie: 
-            wol: 
-            zho: 
-            zza: 
           target_audience:
             acquaintances: for friends and family
             children: for children and adolescents
+            family_acquaintances: for friends and family
+            family_children: for children and adolescents
+            family_nuclear_family: for families
+            family_parents: for parents
+            family_pregnant_woman: for pregnant women
             nuclear_family: for families
             parents: for parents
             pregnant_woman: for pregnant women
@@ -1217,7 +1227,7 @@ en:
           long: Offers on the subject of …
           short: Offers on …
     show:
-      last_updated: Entry last modified on
+      last_update: Entry last modified on
       next_steps:
         code_word: What do you have to ask for or look for on the website?
         heading: What do you have to do?
@@ -1268,7 +1278,7 @@ en:
   opening:
     display_string:
       appointment: by appointment
-      midnight_exception: 
+      midnight_exception: midnight
       time_format: "%l:%M %P"
       time_frame: "%{open} - %{close}"
   organizations:
@@ -1474,181 +1484,6 @@ en:
         </p>
       title: Rechtliche Hinweise
     faq:
-      heading: 
-      section_four:
-        answer_eight: 
-        answer_eight_bullet_one: 
-        answer_eight_bullet_two: 
-        answer_five: 
-        answer_four: 
-        answer_one: 
-        answer_one_bullet_five: 
-        answer_one_bullet_four: 
-        answer_one_bullet_one: 
-        answer_one_bullet_six: 
-        answer_one_bullet_three: 
-        answer_one_bullet_two: 
-        answer_seven: 
-        answer_six: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_one:
-        answer_eight: 
-        answer_eighteen: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four: 
-        answer_fourteen: 
-        answer_nine: 
-        answer_nineteen: 
-        answer_one: 
-        answer_seven: 
-        answer_seventeen: 
-        answer_six: 
-        answer_sixteen: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three: 
-        answer_twelve: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_eighteen: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_nineteen: 
-        question_one: 
-        question_seven: 
-        question_seventeen: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
-      section_three:
-        answer_eight: 
-        answer_five: 
-        answer_four: 
-        answer_nine: 
-        answer_one: 
-        answer_seven: 
-        answer_six: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_two:
-        answer_eight_bullet_one: 
-        answer_eight_bullet_three: 
-        answer_eight_bullet_two: 
-        answer_eight_first_part: 
-        answer_eight_second_part: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four_bullet_one: 
-        answer_four_bullet_two: 
-        answer_four_first_part: 
-        answer_four_second_part: 
-        answer_fourteen_bullet_one: 
-        answer_fourteen_bullet_three: 
-        answer_fourteen_bullet_two: 
-        answer_fourteen_first_part: 
-        answer_fourteen_second_part: 
-        answer_nine_bullet_five: 
-        answer_nine_bullet_four: 
-        answer_nine_bullet_one: 
-        answer_nine_bullet_three: 
-        answer_nine_bullet_two: 
-        answer_nine_first_part: 
-        answer_nine_second_part: 
-        answer_one: 
-        answer_seven_bullet_five: 
-        answer_seven_bullet_four: 
-        answer_seven_bullet_one: 
-        answer_seven_bullet_six: 
-        answer_seven_bullet_three: 
-        answer_seven_bullet_two: 
-        answer_seven_first_part: 
-        answer_seven_second_part: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_seven: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_six_first_part: 
-        answer_six_second_part: 
-        answer_sixteen_first_part: 
-        answer_sixteen_second_part: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three_bullet_one: 
-        answer_three_bullet_three: 
-        answer_three_bullet_two: 
-        answer_three_first_part: 
-        answer_three_second_part: 
-        answer_twelve_bullet_one: 
-        answer_twelve_bullet_three: 
-        answer_twelve_bullet_two: 
-        answer_twelve_first_part: 
-        answer_twelve_second_part: 
-        answer_two_bullet_five: 
-        answer_two_bullet_four: 
-        answer_two_bullet_one: 
-        answer_two_bullet_six: 
-        answer_two_bullet_three: 
-        answer_two_bullet_two: 
-        answer_two_first_part: 
-        answer_two_second_part: 
-        heading: 
-        question_eight: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
       title: Frequently asked questions
     home:
       how:
@@ -2006,6 +1841,19 @@ en:
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
+  routes:
+    '404': 
+    datenschutzhinweise: 
+    definitions: 
+    emails: 
+    new: 
+    preview: 
+    rechtliche-hinweise: 
+    search_locations: 
+    subscribe: 
+    subscriptions: 
+    unsubscribe: 
+    update_requests: 
   shareds:
     forms:
       fill_field: Please fill out this field
@@ -2019,41 +1867,26 @@ en:
   simple_form:
     hints:
       contact:
-        new:
+        show:
           email: 
           message: 
           name: 
       search_form:
-        about:
-          query: 
-          search_location: 
-        faq:
-          query: 
-          search_location: 
         home:
           query: 
           search_location: 
         index:
           query: 
           search_location: 
-        new:
-          query: 
-          search_location: 
-        not_found:
+        show:
           query: 
           search_location: 
       subscription:
-        about:
-          email: 
-        faq:
-          email: 
         home:
           email: 
         index:
           email: 
-        new:
-          email: 
-        not_found:
+        show:
           email: 
     required:
       html: 
